--- a/documentation/operators/sequenceequal.html
+++ b/documentation/operators/sequenceequal.html
@@ -24,6 +24,7 @@ id: sequenceEqual
    <h4>See Also</h4>
    <ul>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/06_Inspection.html#SequenceEqual"><cite>Introduction to Rx</cite>: SequenceEqual</a></li>
+    <li><a href="http://rxmarbles.com/#sequenceEqual">RxMarbles: <code>sequenceEqual</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
