--- a/documentation/operators/sequenceequal.html
+++ b/documentation/operators/sequenceequal.html
@@ -13,7 +13,7 @@ id: sequenceEqual
    <h1>SequenceEqual</h1>
    <h3>determine whether two Observables emit the same sequence of items</h3>
    <figure>
-    <img src="images/sequenceEqual.c.png" width="100%" alt="SequenceEqual" />
+    <img src="images/sequenceEqual.c.png" style="width:100%;" alt="SequenceEqual" />
     <figcaption><p>
      Pass <span class="operator">SequenceEqual</span> two Observables, and it will compare the items emitted by
      each Observable, and the Observable it returns will emit <code>true</code> only if both sequences are the
@@ -44,7 +44,7 @@ id: sequenceEqual
 
   {% lang_operator RxGroovy sequenceEqual %}
      <figure>
-      <img src="images/sequenceEqual.png" width="100%" alt="sequenceEqual" />
+      <img src="images/sequenceEqual.png" style="width:100%;" alt="sequenceEqual" />
       <figcaption><p>
        Pass <code>sequenceEqual</code> two Observables, and it will compare the items emitted by each
        Observable, and the Observable it returns will emit <code>true</code> only if both sequences terminate
@@ -83,7 +83,7 @@ false</pre></div>
 
   {% lang_operator RxJava sequenceEqual %}
      <figure>
-      <img src="images/sequenceEqual.png" width="100%" alt="sequenceEqual" />
+      <img src="images/sequenceEqual.png" style="width:100%;" alt="sequenceEqual" />
       <figcaption><p>
        Pass <code>sequenceEqual</code> two Observables, and it will compare the items emitted by each
        Observable, and the Observable it returns will emit <code>true</code> only if both sequences terminate
@@ -101,7 +101,7 @@ false</pre></div>
 
   {% lang_operator RxJS sequenceEqual %}
      <figure>
-      <img src="images/sequenceEqual.png" width="100%" alt="sequenceEqual" />
+      <img src="images/sequenceEqual.png" style="width:100%;" alt="sequenceEqual" />
       <figcaption><p>
        In RxJS, <code>sequenceEqual</code> is a method of a particular Observable instance, so you pass it
        exactly one other Observable to compare the instance to. You can optionally pass a second parameter: a
