--- a/documentation/operators/sequenceequal.html
+++ b/documentation/operators/sequenceequal.html
@@ -12,8 +12,8 @@ id: sequenceEqual
 
    <h1>SequenceEqual</h1>
    <h3>determine whether two Observables emit the same sequence of items</h3>
-   <figure>
-    <img src="images/sequenceEqual.c.png" style="width:100%;" alt="SequenceEqual" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="sequenceEqual"></rx-marbles>
     <figcaption><p>
      Pass <span class="operator">SequenceEqual</span> two Observables, and it will compare the items emitted by
      each Observable, and the Observable it returns will emit <code>true</code> only if both sequences are the
