--- a/documentation/operators/sequenceequal.html
+++ b/documentation/operators/sequenceequal.html
@@ -81,7 +81,7 @@ false</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava sequenceEqual %}
+  {% lang_operator RxJava&nbsp;1․x sequenceEqual %}
      <figure>
       <img src="images/sequenceEqual.png" style="width:100%;" alt="sequenceEqual" />
       <figcaption><p>
