--- a/documentation/operators/sequenceequal.html
+++ b/documentation/operators/sequenceequal.html
@@ -99,6 +99,12 @@ false</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x sequenceEqual %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS sequenceEqual %}
      <figure>
       <img src="images/sequenceEqual.png" style="width:100%;" alt="sequenceEqual" />
